# computertemp

./: ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac
computertemp/: AUTHORS  ChangeLog  Makefile.am  README  TODO  computertemp_applet.py  computertemp_gconf.py  computertemp_globals.py.in  computertemp_prefs.py  configure.ac  temp_hddtemp.py  temp_i2csys_hwmon.py  temp_i8k.py  temp_ibmacpi.py  temp_null.py  temp_omnibook.py  temp_windfarm.py
computertemp/computertemp/: __init__.py  computertemp_applet.py  computertemp_gconf.py  computertemp_prefs.py  temp_acpi.py  temp_adt746x.py  temp_hddtemp.py  temp_i2csys.py  temp_i2csys_hwmon.py  temp_i8k.py  temp_ibmacpi.py  temp_meta.py  temp_null.py  temp_omnibook.py  temp_windfarm.py
computertemp/data/: GNOME_ComputertempApplet.server.in.in  Makefile.am  computertemp_menu.xml
computertemp/images/: Makefile.am
computertemp/po/: POTFILES.in  en.po  es.po  nl.po  pt_BR.po  sv.po  zh.po
computertemp/scripts/: Makefile.am  computertemp.in
data/: computertemp.schemas.in  computertemp_menu2.xml
po/: ChangeLog  de.po  fr.po  it.po  nl.po
