computertempdir = $(pythondir)/computertemp

computertemp_PYTHON = 		\
	computertemp_applet.py	\
	computertemp_globals.py	\
	computertemp_gconf.py	\
	computertemp_prefs.py	\
	temp_meta.py			\
	temp_acpi.py			\
	temp_adt746x.py			\
	temp_ibmacpi.py			\
	temp_omnibook.py		\
	temp_i8k.py				\
	temp_i2csys.py			\
	temp_i2csys_hwmon.py	\
	temp_hddtemp.py			\
	temp_windfarm.py		\
	temp_null.py			\
	__init__.py

EXTRA_DIST = $(computertemp_PYTHON)
